some tiny updates, tabbar bottom margin

--- a/app.json
+++ b/app.json
@@ -9,7 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "org.cerritos.bible",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "LSApplicationQueriesSchemes": [
+          "zoomus",
+          "zoomus"
+        ]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -37,6 +45,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3423f637-9020-4977-bbf1-b34097eb6f81"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/3423f637-9020-4977-bbf1-b34097eb6f81"
     }
   }
 }
