--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-assets/slider": "^11.0.11",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "4.5.6",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.22",
+    "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
@@ -28,6 +29,7 @@
     "expo-linking": "~7.1.7",
     "expo-localization": "^17.0.7",
     "expo-router": "~5.1.5",
+    "expo-speech": "^14.0.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -47,7 +49,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-asset": "~11.1.7"
+    "expo-keep-awake": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
