--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-keep-awake": "~14.1.4"
+    "expo-keep-awake": "~14.1.4",
+    "expo-av": "~15.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
