--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "dayjs": "^1.11.18",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.7",
     "expo-localization": "^17.0.7",
     "expo-router": "~5.1.5",
@@ -48,9 +51,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-keep-awake": "~14.1.4",
-    "expo-av": "~15.1.7"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
