--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-keep-awake": "~14.1.4",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~7.1.7",
     "expo-localization": "^17.0.7",
     "expo-router": "~5.1.5",
