created login page and some sample accounts

--- a/app.json
+++ b/app.json
@@ -53,7 +53,8 @@
       "router": {},
       "eas": {
         "projectId": "3423f637-9020-4977-bbf1-b34097eb6f81"
-      }
+      },
+      "apiUrl": "https://church-app-production-68eb.up.railway.app"
     },
     "runtimeVersion": {
       "policy": "appVersion"
