--- a/package.json
+++ b/package.json
@@ -11,53 +11,53 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-assets/slider": "^11.0.11",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "dayjs": "^1.11.18",
-    "expo": "~53.0.22",
-    "expo-asset": "~11.1.7",
-    "expo-av": "~15.1.7",
-    "expo-blur": "~14.1.5",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-keep-awake": "~14.1.4",
+    "expo": "^54.0.23",
+    "expo-asset": "~12.0.9",
+    "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.10",
+    "expo-keep-awake": "~15.0.7",
     "expo-linear-gradient": "^15.0.7",
-    "expo-linking": "~7.1.7",
+    "expo-linking": "~8.0.8",
     "expo-localization": "^17.0.7",
-    "expo-router": "~5.1.5",
+    "expo-router": "~6.0.14",
     "expo-speech": "^14.0.7",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.9",
     "i18next": "^25.5.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^16.0.0",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.1.4",
     "@types/react-native": "^0.72.8",
     "dotenv": "^17.2.3",
     "eslint": "^9.25.0",
