--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo start --ios",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -33,7 +33,6 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-localization": "^17.0.7",
-    "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.14",
     "expo-speech": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
